--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,7 +5,7 @@ pipeline{
         stage('build'){
 
             steps{
-                echo 'Build application ......'
+                echo 'Build application .......'
             }
         }
         stage('tests'){
